try to fix js 3

--- a/public/wp-content/themes/ben/style.css
+++ b/public/wp-content/themes/ben/style.css
@@ -636,6 +636,18 @@ body {
     z-index: 14;
   }
 
+  header #header #mainnav #hamburger .closed {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    background-color: #deb887;
+    z-index: -10;
+    border: none;
+    display: block;
+  }
+
   header #header #mainnav #hamburger {
     position: fixed;
     right: 20px;
