--- a/public/wp-content/themes/ben/style.css
+++ b/public/wp-content/themes/ben/style.css
@@ -636,7 +636,7 @@ body {
     z-index: 14;
   }
 
-  header #header #mainnav #hamburger .closed #main-menu {
+  header #header #mainnav #hamburger .closed #ul {
 display: none;
   }
 
