--- a/public/wp-content/themes/ben/style.css
+++ b/public/wp-content/themes/ben/style.css
@@ -2139,6 +2139,14 @@ body {
     max-width: 100%;
   }
 
+  main .section123 .text h3 {
+    color: #8b9e5c;
+    font-family: "Jost Bold";
+    font-size: 2.5rem;
+    line-height: 1.1;
+    max-width: 100%;
+  }
+
   main .section123 .text p {
     color: #504538;
     font-family: "Jost Regular";
