--- a/public/wp-content/themes/ben/style.css
+++ b/public/wp-content/themes/ben/style.css
@@ -317,8 +317,8 @@ body {
   }
 
   header #header {
-    position: fixed;
-    z-index: 2;
+    position: fixed; 
+    z-index: 2; 
     display: grid;
     width: 100%;
     height: 4rem;
@@ -618,6 +618,10 @@ body {
     position: fixed;
     z-index: 11;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .menu-header-container{
+    display: none;
   }
 
 
